# aircraft_damage_vgg16_blip

./: .env.example  .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: gradio_app.py
configs/: inference.yaml  report_generation.yaml  train.yaml
data/: README.md
docs/research_pack/: ACADEMIC_RESEARCH_BRIEF.md  DATASET_AND_TASK_CARD.md  FAILURE_MODE_MATRIX.md  INSPECTION_REPORT_PROTOCOL.md  METRIC_PROVENANCE_MATRIX.md  MODEL_CARD.md  README.md  REPRODUCIBILITY_CHECKLIST.md  VISION_LANGUAGE_LIMITATIONS.md
models/: README.md
notebooks/: README.md  aircraft_damage_vgg16_blip.ipynb  exploration.ipynb
results/: README.md  classification_report.txt  metrics.json
results/sample_reports/: notebook_blip_outputs.txt
scripts/: run_demo.py  run_evaluate.py  run_predict.py  run_train.py
src/aircraft_damage/: __init__.py  config.py  dataset.py  evaluate.py  predict.py  preprocessing.py  report_generator.py  train.py  utils.py  visualization.py
tests/: test_config.py  test_metric_provenance.py  test_predict.py  test_report_generator.py  test_research_pack_exists.py
tools/evidence/: README.md  validate_research_pack.py
